Se ajusta version de Dockerfile